# acoes_financeiras_ETL

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: acoes_dag.py
notebooks/: teste.ipynb
src/: extract.py  load.py  transform.py
